# airlock

./: .gitignore  AGENTS.md  Cargo.toml  README.md  operator.json
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  release.yml
agent_ergonomics_audit/: README.md  phase0_skill_inventory.json
agent_ergonomics_audit/audit/: HANDOFF.md  agent_surfaces.jsonl  ambition_bar_check.md  applied_changes.jsonl  manifest.json  playbook.md  recommendations.jsonl  scorecard_pass_1.md  surface_inventory.jsonl
docs/: airlock_plan.md
fixtures/annotated_mode/: expected_manifest.json  expected_prompt_payload.json  expected_prompt_provenance.json  policy.yaml  request.json  strategy_space.json  system_prompt.txt
fixtures/boundary_failed/: expected_manifest.json  policy.yaml  prompt_payload.json  prompt_provenance.json  request.json  strategy_space.json  system_prompt.txt
fixtures/clean_telemetry_only/: expected_manifest.json  expected_prompt_payload.json  expected_prompt_provenance.json  policy.yaml  request.json  strategy_space.json  system_prompt.txt
fixtures/refusal/: bad_policy.yaml  expected_refusal_bad_policy.json  missing_fields_policy.yaml
packaging/homebrew/: airlock.rb
schemas/: airlock.v0.schema.json  airlock_policy.schema.json  prompt_provenance.schema.json  refusal.schema.json
src/: hash.rs  lib.rs  main.rs  output.rs  paths.rs  types.rs
src/adapter/: mod.rs
src/assembler/: mod.rs  provenance.rs
tests/: assemble_verify_roundtrip.rs  cli_tests.rs  determinism_tests.rs  refusal_tests.rs  schema_fixtures.rs  schema_validation_tests.rs
(+20 files in other folders)
