[package]
name = "airlock"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
description = "Prove what crossed the model boundary"
license = "MIT"

[dependencies]
blake3 = "=1.8.2"
chrono = "=0.4.41"
clap = { version = "=4.5.60", features = ["derive"] }
regex = "=1.11"
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = "=1.0.143"
serde_yaml = "=0.9.34"
sha2 = "=0.10"

[dev-dependencies]
assert_cmd = "2"
jsonschema = "0.28"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
